# MRR-Automation

./: .gitignore  pyproject.toml
specs/: agtech_2025.yaml  climate_adaptation_2025.yaml  cloud_finops_2025.yaml  govtech_2025.yaml  sustainable_aviation_2025.yaml
src/: __init__.py  main.py
src/analysis/: competitive.py  forecast.py  market_sizing.py
src/charts/: engine.py
src/compose/: builder.py  cover.py  flowables.py
src/data/: __init__.py  cache.py  fred.py  world_bank.py
src/design/: __init__.py  brand.py  palette.py  theme.py  typography.py
src/render/: pdf.py
src/spec/: __init__.py  parser.py
